doc/v2.0/_sources/reference/generated/ak.singletons.rst.txt
ak.singletons
-------------

.. py:module: ak.singletons

Defined in `awkward.operations.ak_singletons <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_singletons.py>`__ on `line 9 <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_singletons.py#L9>`__.

.. py:function:: ak.singletons(array, axis=0, *, highlevel=True, behavior=None)


    :param array: Array-like data (anything :py:obj:`ak.to_layout` recognizes).
    :param axis: The dimension at which this operation is applied. The
             outermost dimension is ``0``, followed by ``1``, etc., and negative
             values count backward from the innermost: ``-1`` is the innermost
             dimension, ``-2`` is the next level up, etc.
    :type axis: int
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict

Returns a singleton list (length 1) wrapping each non-missing value and
an empty list (length 0) in place of each missing value.

For example,

.. code-block:: python


    >>> array = ak.Array([1.1, 2.2, None, 3.3, None, None, 4.4, 5.5])
    >>> ak.singletons(array).show()
    [[1.1],
     [2.2],
     [],
     [3.3],
     [],
     [],
     [4.4],
     [5.5]]

See :py:obj:`ak.firsts` to invert this function.

